--- a/package.json
+++ b/package.json
@@ -6,19 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "6.7.0",
-    "@fortawesome/free-solid-svg-icons": "6.7.0",
-    "@fortawesome/react-fontawesome": "0.2.2",
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.7",
     "bootstrap": "5.3.3",
-    "next": "15.0.3",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.28.0"
@@ -29,6 +27,7 @@
     "@types/react-dom": "^18",
     "eslint": "^9",
     "eslint-config-next": "15.0.3",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.15",
     "typescript": "^5"
