--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -22,11 +22,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql_db
 DB_PORT=3306
 DB_DATABASE=Hackathon
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
