--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "@react-spring/web": "^9.7.5",
     "axios": "^1.7.7",
     "bootstrap": "5.3.3",
+    "jwt-decode": "^4.0.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
